1998-11-06    <bjg@ancho.lanl.gov>

	* test.c: ensured that M_PI is available by #include <gsl_math.h>

Wed Sep 16 14:44:08 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* rayleigh.c: added rayleigh tail distribution

Sat Sep 12 13:03:19 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* rayleigh.c: added rayleigh distribution

Mon Aug 31                James Theiler <jt@lanl.gov>

	* Makefile.am: added ../utils/libutils.a to some LDADD's

Mon Aug 17 14:31:55 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl_randist.h: renamed discrete probability distribution
 	parameters to use consistent k,n notation (k = sample, n = total,
 	e.g. p(k) = function(k,n) )

Wed Aug 12 14:02:31 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* lognormal.c: added zeta and sigma (location and scale parameters)

	* logarithmic.c (gsl_ran_logarithmic): added logarithmic distribution

Mon Aug 10 14:41:15 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl-randist.c: added random direction functions

	* gamma.c: added the scale paramter for  the gamma distribution

Thu Aug  6 12:19:59 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gauss.c (gsl_ran_bivariate_gaussian): added bivariate with
 	correlations.

	* hyperg.c: renamed variables, fixed bug

Wed Aug  5 11:21:45 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl-dist.c: renamed gsl-dist.c to gsl-randist.c, for
 	consistency

Tue Aug  4 12:29:17 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* gsl-dist.c: a program for generating samples from the 
 	distributions

	* levy.c (gsl_ran_levy): take care of special case, a=1

	* logistic.c: allow scale parameter, mu

	* weibull.c: allow scale parameter, mu

	* pareto.c: allow scale parameter, mu

	* exppow.c: handle the case a<1 using a transformation of the
 	gamma distribution.

	* gamma.c (gsl_ran_gamma_int): removed the check for
 	GSL_LOGINIFINITY since underflow can't occur for 32-bit random
 	numbers in double precision.

Mon Aug  3 13:09:39 1998  Brian Gough  <bjg@vvv.lanl.gov>

	* test.c: added tests for shuffle and choose
