@@ -1,3 +1,4 @@
+#include <config.h>
 #include <math.h>
 #include <gsl_rng.h>
 #include <gsl_randist.h>
