@@ -1,3 +1,7 @@
+Tue Nov 17 17:02:54 1998  Brian Gough  <bjg@vvv.lanl.gov>
+
+	* added #include <config.h> to all top-level source files
+
 1998-11-06    <bjg@ancho.lanl.gov>
 
 	* test.c: ensured that M_PI is available by #include <gsl_math.h>
